# fontier.agent

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
include/agi/: app.h  defines.h  download.h  fonts.h  log.h  tcp_client.h
src/: main.c
src/agi/: app.c  download.c  fonts_windows.c  log.c  tcp_client.c
